--- a/configure.in
+++ b/configure.in
@@ -1019,6 +1019,7 @@ static|Static|STATIC)
 	MAKE_USE_MODULES="USE_MODULES=static"
 	;;
 auto|Auto|AUTO|1)
+	AC_MSG_CHECKING(how to link modules)
 	dnl check for wxGTK dynamic linkage
 	echo "int main() { return 0; }" >conftest.c
 	if $CXX -o conftest $WX_LIBS conftest.c && \
@@ -1026,10 +1027,12 @@ auto|Auto|AUTO|1)
 	then
 		m_cv_USE_MODULES=dynamic
 		MAKE_USE_MODULES="USE_MODULES=dynamic"
+		AC_MSG_RESULT(dynamically)
 	else
 		m_cv_USE_MODULES=static
 		MAKE_USE_MODULES="USE_MODULES=static"
 		AC_DEFINE(USE_MODULES_STATIC)
+		AC_MSG_RESULT(statically)
 	fi
 	rm -f conftest*
 	AC_DEFINE(USE_MODULES)
