added update target to regenerate the *.*.m4 files

--- a/include/Makefile
+++ b/include/Makefile
@@ -1,10 +1,17 @@
 # Makefile for include directory
+#
+# Here we produce the files MInterface.cpp and MInterface.h in the build
+# directory from MInterface.mid using m4 and we also have an update target to
+# copy these generated files back to the source directory from where they can
+# be checked in the cvs
 
 MID:=$(wildcard .src/*.mid)
-M4DEF:=$(wildcard .src/*.m4)
+M4DEF:=$(wildcard .src/mid2*.m4)
 IDLFILES:=$(patsubst .src/%.mid,%.idl,$(MID))
 INTERFACES:=$(IDLFILES:.idl=.h)
 CPPFILES:=$(IDLFILES:.idl=.cpp)
+SRC_INTERFACES:=$(patsubst %,.src/%,$(INTERFACES:.h=.h.m4))
+SRC_CPPFILES:=$(patsubst %,.src/%,$(CPPFILES:.cpp=.cpp.m4))
 
 include ../makeopts
 
@@ -39,6 +46,18 @@ interface: $(IDLFILES) $(INTERFACES) $(CPPFILES)
 
 install:
 	@true
+
+ifdef M4
+# this target updates the .*.m4 files in the source tree from the regenerated
+# versions
+%.cpp.m4: %.cpp
+	cp $< $@
+
+%.h.m4: %.h
+	cp $< $@
+
+update: $(SRC_INTERFACES) $(SRC_CPPFILES)
+endif
 
 $(IDLFILES) $(INTERFACES) $(CPPFILES): $(MID) $(M4DEF)
 
