--- a/makeopts.in
+++ b/makeopts.in
@@ -96,6 +96,7 @@ REZ	:= @REZ@
 INSTALL	:= @INSTALL@
 INSTALL_PROGRAM	:= @INSTALL_PROGRAM@
 INSTALL_DATA	:= @INSTALL_DATA@
+INSTALL_OPTIONS := -m 755
 
 DESTDIR = @prefix@
 # Directory in which to install scripts.
