--- a/configure.in
+++ b/configure.in
@@ -662,9 +662,8 @@ if test "$ssl_option" = "yes"; then
 		IMAP_CPPFLAGS="-I$ssl_inc -I$ssl_inc/openssl $IMAP_CPPFLAGS"
 	esac
 
-	dnl although we're loading libssl dynamically, cclient uses it
-	dnl statically, so we still need it in LIBS
-	LIBS="$LIBS $LIBS_SSL"
+	dnl note that we don't have to link with SSL libraries because we load
+	dnl them dynamically
 fi
 
 AC_SUBST(MAKE_USESSL)
