--- a/makeopts.in
+++ b/makeopts.in
@@ -8,7 +8,7 @@ top_builddir := @BUILDDIR@
 
 # the c-client (imap) library:
 IMAP_OSTYPE := @CCOSTYPE@
-IMAP_SPECIALAUTHENTICATORS := @IMAP_SPECIALAUTHENTICATORS@
+IMAP_SSLTYPE := @IMAP_SSLTYPE@
 IMAP_CPPFLAGS := @IMAP_CPPFLAGS@
 IMAP_CFLAGS := @IMAP_CFLAGS@
 IMAP_CXXFLAGS := @IMAP_CXXFLAGS@
